# meticulous-backend

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.deb  README.md  back.py  backend.py  backlight_controller.py  ble_gatt.py  build-deb.sh  config.py  database_models.py  db_migration_updater.py  dbus_monitor.py  docker-compose.yml  hostname.py  imager.py  log.py  machine.py  manufacturing.py  met-config.py  notifications.py  ota.py  profile_preprocessor.py  profiles.py  pyproject.toml  run_docker.sh  run_emulated.sh  run_tests.sh  shot_database.py  shot_debug_manager.py  shot_manager.py  sounds.py  ssh_manager.py  start_container.sh  system_services.py  telemetry_service.py  timezone_manager.py  usb.py  (+1 more)
.github/workflows/: build.yml
alembic/: env.py
alembic/versions/: 2025_02_05_1816-ebb6a77afd0e_initial_migration.py  (+3 more)
api/: alarms.py  api.py  base_handler.py  bug_report.py  emulation.py  history.py  machine.py  notifications.py  profiles.py  settings.py  sounds.py  update.py  wifi.py  zeroconf_announcement.py
debian/DEBIAN/: control
esp_serial/: data.py
monitoring/: motor_power_monitoring.py
profile_converter/: controllers.py  curve.py  dictionaries.py  dictionaries_simplified.py  enums.py  head_template.py  nodes.py  profile_converter.py  profile_json.py  references.py  simplified_json.py  stages.py  tail_template.py  triggers.py
tests/: conftest.py  test_backend_listen.py  test_ble_gatt_wifi.py  test_bug_report_api.py  test_machine_message_parsing.py  test_ota.py  test_profile_preprocessor.py  test_shot_database.py
(+5 files in other folders)
